@@ -1,5 +1,7 @@
 #include <stdlib.h>
 void bzero(void *b, size_t length)
-{while(length-->0)
-   *((char *)b)++ = 0;
+{ char *c=b;
+
+ while(length-->0)
+   *c++ = 0;
 }
