@@ -2,8 +2,9 @@ gcl (2.6.1-39) unstable; urgency=high
 
   * Fix segfault in referencing (sgc_)type_map out of bounds which can
     occurr when C stack is below heap, as on alpha.
+  * Cleanup compiler warnings on bcmp.c bzero.c and bcopy.c
 
- -- Camm Maguire <camm@enhanced.com>  Fri,  7 May 2004 21:32:36 +0000
+ -- Camm Maguire <camm@enhanced.com>  Fri,  7 May 2004 21:45:35 +0000
 
 gcl (2.6.1-38) unstable; urgency=low
 
